# fastffnn

./: CMakeLists.txt  bayesian_spectral  curriculum_advanced  fourier_downsample  measure_classifier  measure_swd  spectral_gaussian  train_eyes
proofs/: .fourier_downsample.aux  bayesian_layer.v  block_newton_efficiency.v  bn_diversity.v  bn_gradient.v  dynamic_capacity.v  dynamic_capacity_plus2.v  fourier_downsample.glob  fourier_downsample.v  gaussian_eyes.v  gemm_perf.v  incremental_ffnn.v  measure_classifier.v  radam_dynamic.v  spectral_gaussian.v
src/: bayesian_spectral.cpp  bench_ffnn.cpp  bench_mps.mm  bench_tiling.cpp  curriculum_advanced.cpp  curriculum_bn_diversity.cpp  dynamic_incremental.cpp  fourier_downsample.cpp  full_radam_solver.cu  gaussian_eyes.cpp  incremental_ffnn.cpp  intensive_curriculum.cpp  linux_cuda_curriculum.cu  measure_classifier.cpp  measure_swd.cpp  mphc_solver.cu  pytorch_solvers.py  row_kfac_solver.cu  sa_solver.cu  sheaf_solver.cu  spectral_gaussian.cpp  spectral_gaussian.cu  spectral_gd_solver.cu
